Linux GPIB Package changelog

3.0.0: Completed first pass at port to 2.4 kernel, and cleaned up a lot of little things. 
	Still needs a lot of work, but should have all the capabilities/limitations
	of version 2.05-alpha which it was based on. 

3.0.1: Fixed installation of gpib0.o module.  Fixed driver module for use
	with kernels that use module versioning.  Got rid of all usage of pointers to
	store io addresses.

3.1.0: New driver architecture

3.1.1: New format for config file, added ibdev() function. Conditionally
compiled gpib0 module now split into seperate modules for different board
families, and several shared modules. Got rid of many global variables, it is
now about 90% safe to run more than one board at once. Various bugfixes,
cleanups, and removal of non-essential cruft.  Breaks binary compatibity
between library and modules from earlier versions.

3.1.2: Same as 3.1.1 except with some annoying debugging messages turned off.

3.1.3: Fixed race in nec7210 read that could cause failure to receive last
byte on reads. Board-specific fixes for ines pci, ines pcmcia, and
cec/keithley pci support. 

3.1.4: (in progress) Added easier setup for python binding from Brian Donovan.
To compile/install the Python and Tcl bindings you must run 'make', 'make
install' in the appropriate subdirectory of the 'language' directory.  Enabled
isa-dma in pc2-gpib driver.
