@@ -48,6 +48,7 @@ char cval;
 	interface: T_INTERFACE '{' minor parameter '}'
 			{
 				ibFindConfigs[findIndex].is_interface = 1;
+				ibFindConfigs[findIndex].send_eoi = 1;
 				if(++findIndex > FIND_CONFIGS_LENGTH)
 				{
 					fprintf(stderr, " too many devices in config file\n");
@@ -99,6 +100,7 @@ char cval;
 	device: T_DEVICE '{' option '}'
 			{
 				ibFindConfigs[findIndex].is_interface = 0;
+				ibFindConfigs[findIndex].send_eoi = 1;
 				if(++findIndex > FIND_CONFIGS_LENGTH)
 				{
 					fprintf(stderr, "too many devices in config file\n");
